# gitpr-cli

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: security.yml
src/gitpr/: forges.py  main.py
