[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitpr-cli"
version = "0.1.0"
description = "A CLI tool for interactive PR creation and management."
readme = "README.md"
authors = [
  { name = "Mrinal", email = "mrinal0902@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "PyGithub",
    "GitPython",
    "requests",
    "shellingham",
    "python-gitlab",
    "filelock>=3.20.3"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
gitpr = "gitpr.main:app"

[project.urls]
"Homepage" = "https://github.com/0mrinal9/gitpr-cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pip-audit"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gitpr"]